<resources>
    <string name="app_name">Agência</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="todo">TODO</string>
    <string name="dias">2 dias</string>
    <string name="valor">R$ 421,50</string>
    <string name="data">08/12 - 10/12 de 2017</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="titulo">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="caracters">abcdefghijklmnopqrstuwxyzç ABCDEFGHIJKLMNOPQRSTUWXYZÇ\u0020</string>
    <string name="mes">MM</string>
    <string name="ano">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="botao_finalizar_compra">Finalizar Compra</string>
    <string name="parabens">Parabéns !</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="resumo_da_compra">Confira o resumo da compra:</string>
    <string name="voltar">Voltar</string>

</resources>
